before moving to ble gatt

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,10 +5,12 @@ set(srcs "main.c"
 set(requires
 	my_wifi
 	my_http
+	my_mqtt
     esp_event 
-    esp-tls)
+    esp-tls
+    )
    
 idf_component_register(SRCS "${srcs}"
-                    PRIV_REQUIRES nvs_flash console esp_driver_gpio esp_driver_uart esp_wifi bt  
+                    PRIV_REQUIRES nvs_flash console esp_driver_gpio esp_driver_uart esp_wifi bt  mqtt
                     INCLUDE_DIRS  "." 
                     REQUIRES   ${requires}) # optional, list the public requirements (component names))
