--- a/components/my_mqtt/CMakeLists.txt
+++ b/components/my_mqtt/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
-		SRCS "my_mqtt.c" 
+		SRCS   "my_mqtt.c"
 		INCLUDE_DIRS "."
-		REQUIRES mqtt
+		REQUIRES   mqtt main data_format 
 	)
