--- a/components/my_http/CMakeLists.txt
+++ b/components/my_http/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
 		SRCS "my_http.c" 
 		INCLUDE_DIRS "."
-		REQUIRES esp_http_client
+		REQUIRES esp_http_client  data_format esp_wifi
 	)
